--- a/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Details.cshtml
+++ b/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Details.cshtml
@@ -1,3 +1,49 @@
-﻿<div>
-    This is the detail view.
+﻿<div class="row-fluid">
+    <section class="view-mode span12">
+
+
+        <section class="fd-section">
+            <header>
+                <span class="show-button"></span>
+                <h5 class="title">Sample Title</h5>
+            </header>
+            <div>
+                <div class="">
+                    <div class="data-row clearfix fd-row">
+                        <div class="fd-column span6">
+                            <div class="fd-field">
+                                <span class="control-label">Subject</span>
+                                <div class="controls">
+                                    <span class="control-text">Coevery</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="fd-column span6">
+                            <div class="fd-field">
+                                <span class="control-label">CompanyName</span>
+                                <div class="controls">
+                                    <span class="control-text">Nova</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="">
+                    <div class="data-row clearfix fd-row">
+                        <div class="fd-column span6">
+                            <div class="fd-field">
+                                <span class="control-label">Description</span>
+                                <div class="controls">
+                                    <span class="control-text">Just for test</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="fd-column span6">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </section>
 </div>
