Update some views

--- a/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Create.cshtml
+++ b/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Create.cshtml
@@ -1,45 +1,39 @@
-﻿<div>
-    This is a view that create forms
-</div>
-
-<div class="row-fluid">
+﻿<div class="row-fluid">
     <section class="edit-mode span12">
         <form class="form-horizontal" method="post" name="myForm" novalidate="novalidate">
             <fieldset class="data-section fd-section">
                 <legend class="title">Sample Title</legend>
                 <div>
-                    <div class="">
-                        <div class="data-row clearfix fd-row">
-                            <div class="fd-column span6">
-                                <div class="control-group fd-field">
-                                    <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
-                                    <div class="control controls errortips">
-                                        <input class="span12" type="text" id="LeadPart_Subject_Value" name="LeadPart.Subject.Value" required="" data-msg-required="This field is required." maxlength="255" placeholder="">
-                                    </div>
+                    <div class="data-row clearfix fd-row">
+                        <div class="fd-column span6">
+                            <div class="control-group fd-field">
+                                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
+                                <div class="control controls errortips">
+                                    <input class="span12" type="text" id="LeadPart_Subject_Value" name="LeadPart.Subject.Value" data-msg-required="This field is required." maxlength="255">
                                 </div>
                             </div>
-                            <div class="fd-column span6" >
-                                <div class="control-group fd-field">
-                                    <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
-                                    <div class="control controls errortips">
-                                        <input class="span12" type="text" id="LeadPart_CompanyName_Value" name="LeadPart.CompanyName.Value" maxlength="255" placeholder="">
-                                    </div>
+                        </div>
+                        <div class="fd-column span6" >
+                            <div class="control-group fd-field">
+                                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
+                                <div class="control controls errortips">
+                                    <input class="span12" type="text" id="LeadPart_CompanyName_Value" name="LeadPart.CompanyName.Value" maxlength="255">
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div fd-row="" class="">
-                        <div class="data-row clearfix fd-row">
-                            <div class="fd-column span6">
-                                <div class="control-group fd-field">
-                                    <label class="title control-label" for="LeadPart_Description_Value">Description</label>
-                                    <div class="control controls errortips">
-                                        <input class="span12" type="text" id="LeadPart_Description_Value" name="LeadPart.Description.Value" maxlength="255" placeholder="">
-                                    </div>
+                </div>
+                <div>
+                    <div class="data-row clearfix fd-row">
+                        <div class="fd-column span6">
+                            <div class="control-group fd-field">
+                                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
+                                <div class="control controls errortips">
+                                    <input class="span12" type="text" id="LeadPart_Description_Value" name="LeadPart.Description.Value" maxlength="255">
                                 </div>
                             </div>
-                            <div class="fd-column span6">
-                            </div>
+                        </div>
+                        <div class="fd-column span6">
                         </div>
                     </div>
                 </div>
