--- a/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Index.cshtml
+++ b/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    Style.Include("grid.css");
-    Script.Include("jqGrid/jquery.jqGrid.src.js");
-}
-@if (Model.Header != null) {
+﻿@if (Model.Header != null) {
     @Display(Model.Header)
 }
 <section id="main-content">
