--- a/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Create.cshtml
+++ b/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Create.cshtml
@@ -1,63 +1,245 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-    <link rel="stylesheet" href="Create.css"/>
-</head>
-<body>
-<div class="form-structure">
-    <section class="edit-mode span12">
-        <form class="form-horizontal" method="post" name="myForm" novalidate="novalidate">
-            <fieldset class="data-section">
-                <legend class="title">Sample Title</legend>
-                <div class="data-row clearfix">
-                    <div class="row-left span6">
-                        <div class="control-group">
-                            <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
+﻿<div class="form-structure">
 
-                            <div class="control controls errortips">
-                                <input class="span12" type="text" id="LeadPart_Subject_Value"
-                                       name="LeadPart.Subject.Value" data-msg-required="This field is required."
-                                       maxlength="255">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row-right span6">
-                        <div class="control-group">
-                            <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
+<form method="post">
+<fieldset class="column-1-eq">
+    <legend>1 column</legend>
+    <div class="data-row">
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
 
-                            <div class="control controls errortips">
-                                <input class="span12" type="text" id="LeadPart_CompanyName_Value"
-                                       name="LeadPart.CompanyName.Value" maxlength="255">
-                            </div>
-                        </div>
-                    </div>
+                <div class="control controls errortips" id="LeadPart_Subject_Value">
+                    <input type="text">
                 </div>
-                <div class="data-row clearfix">
-                    <div class="row-left span6">
-                        <div class="control-group">
-                        </div>
-                    </div>
-                    <div class="row-right span6">
-                        <div class="control-group">
-                            <label class="title control-label" for="LeadPart_Description_Value">Description</label>
+            </div>
+        </div>
+    </div>
+    <div class="data-row">
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
 
-                            <div class="control controls errortips">
-                                <input class="span12" type="text" id="LeadPart_Description_Value"
-                                       name="LeadPart.Description.Value" maxlength="255">
-                            </div>
-                        </div>
-                    </div>
-
+                <div class="control controls errortips">
+                    <input type="text" id="LeadPart_Description_Value">
                 </div>
-            </fieldset>
-            <input name="__RequestVerificationToken" type="hidden"
-                   value="7GtCMIK-U8zTicSIJtLtJrHkC88mMnNniNjaKX09ykbaYGo6HKjiTbyEBXZ2Lx7Yp0_RowHE1DdsviA89hfGfM3gDUsBcLpLB39uumVB68-f5LuWjqRD_ra7zcnCKYCYm7HBqtx5O0w9anOuMU3zhx3mnGFNrNVCeYTABS4PsCc1">
-        </form>
-    </section>
+            </div>
+        </div>
+
+    </div>
+</fieldset>
+
+<fieldset class="column-2-eq">
+    <legend>2 columns</legend>
+    <div class="data-row">
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
+
+                <div class="control controls errortips">
+                    <input type="text" id="LeadPart_CompanyName_Value">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="data-row">
+        <div class="data-column">
+            <div class="control-group">
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+
+    </div>
+</fieldset>
+
+<fieldset class="column-3-eq">
+    <legend>3 columns</legend>
+    <div class="data-row">
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="data-row">
+        <div class="data-column">
+            <div class="control-group">
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+            </div>
+        </div>
+    </div>
+</fieldset>
+
+<fieldset class="column-3-eq">
+    <legend>3 columns with 1 line</legend>
+    <div class="data-row">
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="data-row">
+        <div class="data-column-100p">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+
+    </div>
+</fieldset>
+
+<fieldset class="column-3-eq">
+    <legend>3 columns with 1 line 66p</legend>
+    <div class="data-row">
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+            </div>
+        </div>
+        <div class="data-column">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="data-row">
+        <div class="data-column-66p">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+</fieldset>
+
+<fieldset class="column-25p-75p">
+    <legend>columns with 25% and 75%</legend>
+    <div class="data-row">
+        <div class="data-column-25p">
+            <div class="control-group">
+                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+        <div class="data-column-75p">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="data-row">
+        <div class="data-column-25p">
+            <div class="control-group">
+            </div>
+        </div>
+        <div class="data-column-75p">
+            <div class="control-group">
+                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
+
+                <div class="control controls errortips">
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+
+    </div>
+</fieldset>
+
+<input type="hidden">
+</form>
+
 </div>
-</body>
-</html>
+
+
 @{
     Style.Include("Create.css");
 }
