Update create page

--- a/src/Coevery.Web/Modules/Sample.Lead/Styles/Create.css
+++ b/src/Coevery.Web/Modules/Sample.Lead/Styles/Create.css
@@ -1,7 +1,10 @@
 ﻿.form-structure fieldset {
-    float: left;
     clear: both;
     width: 98%;
+}
+
+.form-structure fieldset div {
+    margin: 0;
 }
 
 .form-structure .data-row > div {
