--- a/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Create.cshtml
+++ b/src/Coevery.Web/Modules/Sample.Lead/Views/Lead/Create.cshtml
@@ -1,245 +1,7 @@
-﻿<div class="form-structure">
-
-<form method="post">
-<fieldset class="column-1-eq">
-    <legend>1 column</legend>
-    <div class="data-row">
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
-
-                <div class="control controls errortips" id="LeadPart_Subject_Value">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="data-row">
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
-
-                <div class="control controls errortips">
-                    <input type="text" id="LeadPart_Description_Value">
-                </div>
-            </div>
-        </div>
-
-    </div>
-</fieldset>
-
-<fieldset class="column-2-eq">
-    <legend>2 columns</legend>
-    <div class="data-row">
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
-
-                <div class="control controls errortips">
-                    <input type="text" id="LeadPart_CompanyName_Value">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="data-row">
-        <div class="data-column">
-            <div class="control-group">
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-
-    </div>
-</fieldset>
-
-<fieldset class="column-3-eq">
-    <legend>3 columns</legend>
-    <div class="data-row">
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="data-row">
-        <div class="data-column">
-            <div class="control-group">
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-            </div>
-        </div>
-    </div>
-</fieldset>
-
-<fieldset class="column-3-eq">
-    <legend>3 columns with 1 line</legend>
-    <div class="data-row">
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="data-row">
-        <div class="data-column-100p">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-
-    </div>
-</fieldset>
-
-<fieldset class="column-3-eq">
-    <legend>3 columns with 1 line 66p</legend>
-    <div class="data-row">
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-            </div>
-        </div>
-        <div class="data-column">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="data-row">
-        <div class="data-column-66p">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-    </div>
-</fieldset>
-
-<fieldset class="column-25p-75p">
-    <legend>columns with 25% and 75%</legend>
-    <div class="data-row">
-        <div class="data-column-25p">
-            <div class="control-group">
-                <label class="title control-label required" for="LeadPart_Subject_Value">Subject</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-        <div class="data-column-75p">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_CompanyName_Value">CompanyName</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="data-row">
-        <div class="data-column-25p">
-            <div class="control-group">
-            </div>
-        </div>
-        <div class="data-column-75p">
-            <div class="control-group">
-                <label class="title control-label" for="LeadPart_Description_Value">Description</label>
-
-                <div class="control controls errortips">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-
-    </div>
-</fieldset>
-
-<input type="hidden">
-</form>
-
-</div>
-
-
-@{
+﻿@{
     Style.Include("Create.css");
 }
+@if (Model.Actions != null) {
+    @Display(Model.Actions)
+}
+@Display(Model.Content)
