add utilities to get type friendly name

--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ContentPartRecordTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ContentPartRecordTemplate.tt
@@ -1,13 +1,16 @@
 <#@ template debug="false" language="C#" #>
 <#@ output extension=".txt" #>
+<#@ import namespace="Coevery.DeveloperTools.CodeGeneration.Utils" #>
 <#@ parameter type="System.String" name="Namespace" #>
 <#@ parameter type="Coevery.DeveloperTools.CodeGeneration.Services.DynamicDefinition" name="ModelDefinition" #>
+using System;
+using System.Collections.Generic;
 using Coevery.ContentManagement.Records;
 
 namespace <#=Namespace#>.Models {
     public class <#=ModelDefinition.Name#>PartRecord : ContentPartRecord {
 <#foreach (var field in ModelDefinition.Fields) { #>
-		public virtual <#= field.Type #> <#=field.Name #> { get; set; }
+		public virtual <#= field.Type.GetFriendlyName() #> <#=field.Name #> { get; set; }
 <# } #>
     }
 }
