--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ContentPartTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ContentPartTemplate.tt
@@ -1,13 +1,16 @@
 ﻿<#@ template debug="false" language="C#" #>
 <#@ output extension=".txt" #>
+<#@ import namespace="Coevery.DeveloperTools.CodeGeneration.Utils" #>
 <#@ parameter type="System.String" name="Namespace" #>
 <#@ parameter type="Coevery.DeveloperTools.CodeGeneration.Services.DynamicDefinition" name="ModelDefinition" #>
+using System;
+using System.Collections.Generic;
 using Coevery.ContentManagement;
 
 namespace <#=Namespace#>.Models {
     public sealed class <#=ModelDefinition.Name#>Part : ContentPart<<#=ModelDefinition.Name#>PartRecord> {
 <#foreach (var field in ModelDefinition.Fields) { #>
-		public <#= field.Type #> <#=field.Name #>{
+		public <#= field.Type.GetFriendlyName() #> <#=field.Name #>{
 			get{ return Record.<#=field.Name #>; }
 			set{ Record.<#=field.Name #> = value; }
 		}
