--- a/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/PublishConfirm.cshtml
+++ b/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/PublishConfirm.cshtml
@@ -1,23 +1,43 @@
 ﻿@using System.Web.Mvc.Html
-@using (Html.BeginForm("PublishConfirm", "Admin", FormMethod.Post)) {
-    @Html.ValidationSummary()
-
-    <div>
-        <span>Modules</span> @*@Html.DropDownList()*@   <!-- 此处还未实现 -->
-    </div>
-    
-    <div>
-        <span>Controller: </span> @Html.CheckBox("Controller")
-    </div>
-    <div>
-        <span>View: </span>@Html.CheckBox("View")
-    </div>
-    <div>
-        <span>Model: </span>@Html.CheckBox("Model")
-    </div>
-    <div>
-        <span>Javascript: </span>@Html.CheckBox("Javascript")
-    </div>
-    
-    
+@model Coevery.DeveloperTools.EntityManagement.ViewModels.PublishConfirmViewModel
+@{
+    var modules = Model.Modules.Select(m => new SelectListItem {
+        Text = m.Name,
+        Value = m.Id
+    });
 }
+<header id="page-title" class="ng-scope">
+        <h1 class="pull-left">Publish Confirm</h1>
+    </header>
+
+    <section id="main-content" style="margin-top: 47px" class="ng-scope">
+        <div id="page-actions" class="clearfix">
+            <div class="btn-toolbar pull-left" style="left: auto;">
+                <button class="btn btn-small" data-ng-click="exit()">@T("Back<")</button>
+                <button type="submit" class="btn btn-small btn-primary" data-ng-click="publish()">@T("Publish")</button>
+            </div>
+        </div>
+
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="form-horizontal no-border">
+                    @using (Html.BeginFormAntiForgeryPost(Url.Action("PublishConfirm"), FormMethod.Post,
+                        new {@class = "edit-mode", id = "myForm"})) {
+                        <fieldset>
+                            <legend>Please choose which module to settle the generated files</legend>
+                            <section class="data-row control-group">
+                                <div class="span6">
+                                    <label class="control-label required" for="DisplayName">Output Module</label>
+                                    <div class="controls errortips">
+                                        @Html.DropDownListFor(m=>m.ModuleId, modules, new{@class="span12", required=""})
+                                    </div>
+                                </div>
+                                <div class="span6">
+                                </div>
+                            </section>
+                        </fieldset>
+                    }
+                </div>
+            </div>
+        </div>
+    </section>
