Modify Form Designer

--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsDetailViewTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsDetailViewTemplate.tt
@@ -1,6 +1,6 @@
 ﻿<#@ template debug="false" language="C#" #>
 <#@ output extension=".txt" #>
-<#@ parameter type="System.Collections.Generic.ICollection<Coevery.DeveloperTools.FormDesigner.Models.Section>" name="SectionList" #>
+<#@ parameter type="System.Collections.Generic.IList<Coevery.DeveloperTools.FormDesigner.Models.Section>" name="SectionList" #>
 
 <div class = "form-structure">
 	<# foreach (var layoutSection in SectionList) { #>
